--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "discord.js": "^14.18.0",
     "dotenv": "^16.0.2",
     "http": "^0.0.1-security",
+    "mongoose": "^8.19.0",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
     "querystring": "^0.2.1",
