fix: store configs in database

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 TOKEN=BOT_TOKEN
-DB_URL=mongodb+srv://lan_creator:<db_password>@lancreatorcluster.slv5gxj.mongodb.net/?retryWrites=true&w=majority&appName=LanCreatorCluster
+DB_URL=mongodb+srv://lan_creator:<db_password>@lancreatorcluster.slv5gxj.mongodb.net/lan_creator?retryWrites=true&w=majority&appName=LanCreatorCluster
