--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "mongoose": "^8.19.0",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
-    "querystring": "^0.2.1",
-    "uuid": "^10.0.0"
+    "querystring": "^0.2.1"
   }
 }
