--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-token=BOT_TOKEN
+TOKEN=BOT_TOKEN
+DB_URL=mongodb+srv://lan_creator:<db_password>@lancreatorcluster.slv5gxj.mongodb.net/lan_creator?retryWrites=true&w=majority&appName=LanCreatorCluster
