--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lan_creator",
-  "version": "1.9.0",
+  "version": "2.0.0",
   "description": "",
   "main": "src/bot.js",
   "scripts": {
@@ -18,9 +18,9 @@
     "discord.js": "^14.18.0",
     "dotenv": "^16.0.2",
     "http": "^0.0.1-security",
+    "mongoose": "^8.19.0",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
-    "querystring": "^0.2.1",
-    "uuid": "^10.0.0"
+    "querystring": "^0.2.1"
   }
 }
